PS/2 interface improvements: build-time-optional test code; make sixus actually 6us instead of much shorter; make TX immediate; shortening input delays which mess up TX; on TX pull data down before releasing clock

--- a/vtj1peplx9.ucf
+++ b/vtj1peplx9.ucf
@@ -42,6 +42,10 @@ NET "o_video_b<3>"  LOC = A13;
 NET "ps2a_clk"      LOC = "C9" | PULLUP;
 NET "ps2a_dat"      LOC = "A9" | PULLUP;
 
+# the other PS/2 port on this board
+NET "ps2a_clk"      LOC = "B8" | PULLUP;
+NET "ps2a_dat"      LOC = "A8" | PULLUP;
+
 # audio
 NET "o_audio_l"      LOC = "K15";
 NET "o_audio_r"      LOC = "K16";
