changing name of serial port signals to no longer have "ftdi" in the name, because the serial line might not be going through an FTDI chip in all use cases; also, some documentation changes

--- a/vtj1.ucf
+++ b/vtj1.ucf
@@ -60,8 +60,8 @@ NET o_video_r(1)   LOC="P119" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;
 NET o_video_r(2)   LOC="P120" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;
 NET o_video_r(3)   LOC="P121" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;
 # serial port over USB via the FTDI chip
-NET rx_ftdi        LOC="P101" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;
-NET tx_ftdi        LOC="P105" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST | PULLUP;
+NET rx_serial        LOC="P101" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;
+NET tx_serial        LOC="P105" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST | PULLUP;
 # PS/2 port A
 NET ps2a_clk       LOC="P115" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST | PULLUP;
 NET ps2a_dat       LOC="P114" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST | PULLUP;
